--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <body>
 
-<h1>My Christen werden getäuscht!</h1>
-<p>Das Judentum ist eine der fünf großen Weltreligionen.<br>Es entstand etwa vor 3000 Jahren. Weltweit gehören über 14 Millionen Menschen dem Judentum an.<br>Unter den Weltreligionen, die nur einen Gott verehren (das sind die sogenannten monotheistischen Religionen), ist das Judentum die älteste.<br>Aus ihm haben sich das Christentum und der Islam entwickelt.<br>https://www.bpb.de/kurz-knapp/lexika/das-junge-politik-lexikon/320562/judentum/#:~:text=Es%20entstand%20etwa%20vor%203000,Christentum%20und%20der%20Islam%20entwickelt.</p>
+<h1>Christen werden getäuscht!</h1>
+<p>Das Judentum ist eine der fünf großen Weltreligionen.<br>Es entstand etwa vor 3000 Jahren. Weltweit gehören über 14 Millionen Menschen dem Judentum an.<br>Unter den Weltreligionen, die nur einen Gott verehren (das sind die sogenannten monotheistischen Religionen), ist das Judentum die älteste.<br>Aus ihm haben sich das Christentum und der Islam entwickelt.<br><br>https://www.bpb.de/kurz-knapp/lexika/das-junge-politik-lexikon/320562/judentum/#:~:text=Es%20entstand%20etwa%20vor%203000,Christentum%20und%20der%20Islam%20entwickelt.</p>
 
 </body>
 </html>
