--- a/index.html
+++ b/index.html
@@ -1,9 +1,24 @@
 <!DOCTYPE html>
 <html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<style>
+body {
+  background-color: rgb(241, 76, 76);
+}
+
+@media only screen and (max-width: 600px) {
+  body {
+    background-color: rgb(224, 212, 99);
+  }
+}
+</style>
+</head>
 <body>
 
-<h1>Head Test</h1>
-<p>1<br>2<br>3</p>
+<p>„Was ist das Schwerste, ihr Helden? so fragt der tragsame Geist, dass ich es auf mich nehme und meiner Stärke froh werde. Ist es nicht das: sich erniedrigen, um seinem Hochmuth wehe zu thun? Seine Thorheit leuchten lassen, um seiner Weisheit zu spotten?“ </p>
 
 </body>
 </html>
+
+
